[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secret-word-mcp-server"
version = "0.1.0"
description = "A simple MCP server that returns a secret word via HTTP"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[project.scripts]
secret-word-server = "server:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]